--- a/index.html
+++ b/index.html
@@ -52,14 +52,6 @@
                 </router-link>
                 <div class="nav__actions">
                     <button
-                        class="nav__icon"
-                        @click.prevent="store.toggleDark()"
-                    >
-                        <img
-                            :src="store.dark ? '/assets/light.svg' : '/assets/dark.svg'"
-                            alt=""
-                        />
-                    </button>
                     <!-- Replace the '#' with your discord server's invite-->
                     <!-- 64-66 disabled for now (discord server) <a class="nav__icon" href="#">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
@@ -78,3 +70,13 @@
                         >Submit Record</a
                     >
                     these would be 68-73 for list submission
+
+ class="nav__icon"
+                        @click.prevent="store.toggleDark()"
+                    >
+                        <img
+                            :src="store.dark ? '/assets/light.svg' : '/assets/dark.svg'"
+                            alt=""
+                        />
+                    </button>
+this next thing is for dark mode
