--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                 <router-link class="nav__tab" to="/roulette">
                     <span class="type-label-lg">Roulette</span>
                 </router-link>
+                 class="nav__icon"
+                        @click.prevent="store.toggleDark()"
+                    >
+                        <img
+                            :src="store.dark ? '/assets/light.svg' : '/assets/dark.svg'"
+                            alt=""
+                        />
+                    </button>
                 <div class="nav__actions">
                     <button
                     <!-- Replace the '#' with your discord server's invite-->
