--- a/index.html
+++ b/index.html
@@ -38,11 +38,17 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <h2>e Demonslist</h2>
-                <p>v1.0.0</p>
+                <p>v1.0.0</p>            
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
                     <span class="type-label-lg">List</span>
+                </router-link>
+                <router-link class="nav__tab" to="/leaderboard">
+                    <span class="type-label-lg">Leaderboard</span>
+                </router-link>
+                <router-link class="nav__tab" to="/roulette">
+                    <span class="type-label-lg">Roulette</span>
                 </router-link>
                 <div class="nav__actions">
                     <button
