--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <h2>e Demonslist</h2>
-                <p>[e] clan</p>            
+                <p>[e] Clan</p>            
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
